<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.DetailUser">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/headerProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_profile"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="32dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_baseline_person_outline_24"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/TextUsername.white"
                        android:layout_marginBottom="16dp"
                        tools:text="@string/name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCompany"
                            style="@style/CompanyLocation"
                            android:drawableTop="@drawable/ic_baseline_location_city_24"
                            tools:text="@string/company" />

                        <TextView
                            android:id="@+id/tvLocation"
                            style="@style/CompanyLocation"
                            android:drawableTop="@drawable/ic_baseline_location_on_24"
                            tools:text="@string/location" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/headerProfile"
                    android:layout_margin="16dp"
                    android:padding="16dp"
                    app:cardCornerRadius="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvRepository"
                            style="@style/ValueProfile"
                            android:drawableTop="@drawable/repository"
                            android:text="@string/repository"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvFollowers"
                            style="@style/ValueProfile"
                            android:drawableTop="@drawable/followers"
                            android:text="@string/followers"
                            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                            app:layout_constraintStart_toEndOf="@+id/tvRepository"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvFollowing"
                            style="@style/ValueProfile"
                            android:drawableTop="@drawable/following"
                            android:text="@string/following"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvRepositoryValue"
                            style="@style/TextUsername.black"
                            android:layout_marginVertical="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/tvRepository"
                            app:layout_constraintStart_toStartOf="@+id/tvRepository"
                            app:layout_constraintTop_toBottomOf="@+id/tvRepository"
                            tools:text="@string/dummy_value" />

                        <TextView
                            android:id="@+id/tvFollowersValue"
                            style="@style/TextUsername.black"
                            android:layout_marginVertical="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
                            app:layout_constraintStart_toStartOf="@+id/tvFollowers"
                            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
                            tools:text="@string/dummy_value" />

                        <TextView
                            android:id="@+id/tvFollowingValue"
                            style="@style/TextUsername.black"
                            android:layout_marginVertical="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
                            app:layout_constraintStart_toStartOf="@+id/tvFollowing"
                            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
                            tools:text="@string/dummy_value" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/progressBarDetail"
                    style="@style/ProgressBar" />
            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        app:backgroundTint="@color/colorAccent"
        tools:src="@drawable/unfavorite" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/colorPrimary" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>